added db health check

--- a/src/Catalog/Catalog.Api.csproj
+++ b/src/Catalog/Catalog.Api.csproj
@@ -8,10 +8,12 @@
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="AspNetCore.HealthChecks.NpgSql" Version="8.0.1" />
+    <PackageReference Include="AspNetCore.HealthChecks.UI.Client" Version="8.0.1" />
+    <PackageReference Include="HealthChecks.PostgreSQL" Version="1.1.0" />
     <PackageReference Include="Marten" Version="7.26.1" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
 	  <PackageReference Include="Carter" Version="8.2.1" />
-
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\BuildingBlocks\BuildingBlocks\BuildingBlocks.csproj" />
