--- a/src/Catalog/Dockerfile.original
+++ b/src/Catalog/Dockerfile.original
@@ -9,18 +9,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Catalog/Catalog.Api.csproj", "Catalog/"]
-COPY ["src/BuildingBlocks/BuildingBlocks/BuildingBlocks.csproj", "src/BuildingBlocks/BuildingBlocks/"]
-RUN dotnet restore "./Catalog/Catalog.Api.csproj"
+COPY ["Catalog/Catalog.csproj", "Catalog/"]
+RUN dotnet restore "./Catalog/Catalog.csproj"
 COPY . .
 WORKDIR "/src/Catalog"
-RUN dotnet build "./Catalog.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+RUN dotnet build "./Catalog.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./Catalog.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./Catalog.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "Catalog.Api.dll"]
+ENTRYPOINT ["dotnet", "Catalog.dll"]
