--- a/Services/Basket/Basket.Api/appsettings.Development.json
+++ b/Services/Basket/Basket.Api/appsettings.Development.json
@@ -1,4 +1,8 @@
 {
+  "ConnectionStrings": {
+    "Database": "Host=localhost;Port=5433;Username=postgres;Password=postgres;Database=BasketDb;",
+    "Redis": "localhost:6379"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
